--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,3 +20,20 @@ collections:
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+
+collections:
+  - label: 'Home Pages'
+    name: 'home'
+    files: 
+      - label: 'Home Page'
+        name: 'home'
+        file: 'content/pages/home.json'
+        format: 'json'
+        fields: 
+          - { label: Site Name, name: sitename, widget: string, hint: 'Site name!' }
+          - {
+              label: Site Description,
+              name: sitedescription,
+              widget: string,
+              hint: 'description'
+            }
