--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "autoprefixer": "^9.8.6",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "node-sass": "^5.0.0",
     "nuxt": "^2.0.0",
     "postcss": "^7.0.35",
+    "sass-loader": "^10.1.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
   },
   "devDependencies": {
