--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt": "^2.0.0",
     "postcss": "^7.0.35",
     "sass-loader": "^10.1.0",
+    "smooth-scrollbar": "^8.5.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
   },
   "devDependencies": {
